order working need to add the analysis part

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Restaurant Dashboard</title>
-    <!-- Add your CSS stylesheets and JavaScript files here -->
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <title>Welcome to the Blogging Platform</title>
+<!--    <link rel="stylesheet" href="{{ url_for('static', filename="CSS/style.css") }}">-->
 </head>
 <body>
-    <form action="/place-order" method="POST">
-        <label><h3>Select the Items from Menu:</h3></label>
-        {% for item in menu.keys() %}
-            <input type="checkbox" name="{{ item }}" value="{{ menu[item] }}">
-            <input type="number" name="qty_{{ item }}">
-            <label for="{{ item }}" name="value">{{ menu[item] }}</label><br>
-        {% endfor %}
-        <br>
-        <button type="submit">Place the Order</button>
-    </form>
+<h1>Welcome to the Blogging Platform</h1>
+<nav>
+    <a href="{{ url_for('order') }}">Click to Place an Order</a>
+    <br>
+    <a>Click to Analysis</a>
+</nav>
 </body>
 </html>
