order working need to add the analysis part

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,7 +9,7 @@
 <nav>
     <a href="{{ url_for('order') }}">Click to Place an Order</a>
     <br>
-    <a>Click to Analysis</a>
+    <a href="{{ url_for('analysis') }}">Click to Analysis</a>
 </nav>
 </body>
 </html>
