--- a/src/templates/analysis.html
+++ b/src/templates/analysis.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sales Analysis</title>
 </head>
 <body>
 <h1>Sales Analysis</h1><br>
