--- a/src/templates/analysis-weekly.html
+++ b/src/templates/analysis-weekly.html
@@ -2,52 +2,123 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weekly analysis</title>
+    <title>Weekly Analysis</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #F8F8F8;
+            padding: 20px;
+        }
+
+        h3 {
+            color: #CC3333;
+            text-align: left;
+        }
+
+        h4 {
+            color: black;
+            margin-bottom: 10px;
+            text-decoration: underline;
+        }
+
+        p {
+            margin: 0;
+            padding-top: 10px;
+        }
+
+        img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto;
+            padding: 10px;
+        }
+
+        .table-container {
+            max-width: 800px;
+            margin: 0 auto;
+            overflow-x: auto;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px dotted black;
+        }
+
+        th,
+        td {
+            padding: 10px;
+            text-align: left;
+            border: 1px dotted black;
+        }
+
+        th {
+            background-color: #CC3333;
+            color: #FFFFFF;
+        }
+
+        a {
+            display: block;
+            width: 200px;
+            margin: 0 auto;
+            padding: 10px;
+            background-color: #CC3333;
+            color: #FFFFFF;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-
-<h1> Weekly Analysis</h1>
-<u><h4>1. Week analysis of {{ title[0] }}</h4></u>
-<p>Graph</p>
-<img src={{ filename[0] }} >
-<p>Table</p>
-<table border="1px dotted black">
-    <tr>
-        <th>S.No</th>
-        <th>Day of Week</th>
-        <th>Qty</th>
-    </tr>
-    {% for item in weekQty %}
+<h1>Weekly Analysis</h1>
+<u><h3>1. Week analysis of {{ title[0] }}</h3></u>
+<h4>Graph</h4>
+<img src="{{ filename[0] }}" alt="{{ title[0] }} Graph">
+<h4>Table</h4>
+<div class="table-container">
+    <table>
         <tr>
-            <th>{{ loop.index }}</th>
-            <th>{{ item[0] }}</th>
-            <th>{{ item[1] }}</th>
+            <th>S.No</th>
+            <th>Day of Week</th>
+            <th>Qty</th>
         </tr>
-    {% endfor %}
-</table>
+        {% for item in weekQty %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ item[0] }}</td>
+                <td>{{ item[1] }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
 <br>
 <hr>
 <br>
 
-
-<u><h4>2. Week analysis of {{ title[1] }}</h4></u>
-<p>Graph</p>
-<img src={{ filename[1] }} >
-<p>Table</p>
-<table border="1px dotted black">
-    <tr>
-        <th>S.No</th>
-        <th>Day of Week</th>
-        <th>Revenue</th>
-    </tr>
-    {% for item in weekSales %}
+<u><h3>2. Week analysis of {{ title[1] }}</h3></u>
+<h4>Graph</h4>
+<img src="{{ filename[1] }}" alt="{{ title[1] }} Graph">
+<h4>Table</h4>
+<div class="table-container">
+    <table>
         <tr>
-            <th>{{ loop.index }}</th>
-            <th>{{ item[0] }}</th>
-            <th>Rs. {{ item[1] }}</th>
+            <th>S.No</th>
+            <th>Day of Week</th>
+            <th>Revenue</th>
         </tr>
-    {% endfor %}
-</table>
+        {% for item in weekSales %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ item[0] }}</td>
+                <td>Rs. {{ item[1] }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
 <br>
 
 <a href="{{ url_for('home') }}">Go to Dashboard</a>
