--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to the Blogging Platform</title>
-    <!--    <link rel="stylesheet" href="{{ url_for('static', filename="CSS/style.css") }}">-->
+    <title>Tea Traffic</title>
+    <style>
+        body {
+            background-color: #F8F8F8;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            color: #CC3333;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        nav {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        nav a {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #CC3333;
+            color: #FFFFFF;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+
+        nav a:hover {
+            background-color: #992222;
+        }
+    </style>
 </head>
 <body>
-<h1>Welcome to the Blogging Platform</h1>
-<nav>
-    <a href="{{ url_for('login') }}">Click to Login</a>
-    <br>
-</nav>
+    <h1>Welcome to Tea Traffic</h1>
+    <nav>
+        <a href="{{ url_for('login') }}">Click to Login</a>
+        <br>
+    </nav>
 </body>
 </html>
