--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,20 +2,77 @@
 <html>
 <head>
     <title>Login</title>
-    <!--    <link rel="stylesheet" href="{{ url_for('static', filename="CSS/style.css") }}">-->
+    <style>
+        body {
+            background-color: #F8F8F8;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            color: #CC3333;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #FFFFFF;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .mb-3 {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #CCCCCC;
+            border-radius: 3px;
+            box-sizing: border-box;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #CC3333;
+            color: #FFFFFF;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            background-color: #992222;
+        }
+    </style>
 </head>
 <body>
-<h1>Login</h1>
-<form action="{{ url_for('login') }}" method="post">
-    <div class="mb-3">
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" required>
-    </div>
-    <div class="mb-3">
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" required>
-    </div>
-    <input type="submit" value="Login" class="btn btn-primary">
-</form>
+    <h1>Login</h1>
+    <form action="{{ url_for('login') }}" method="post">
+        <div class="mb-3">
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username" required>
+        </div>
+        <div class="mb-3">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" required>
+        </div>
+        <input type="submit" value="Login" class="btn">
+    </form>
 </body>
 </html>
