--- a/src/templates/analysis.html
+++ b/src/templates/analysis.html
@@ -43,6 +43,7 @@
 <h1>Sales Analysis</h1><br>
 
 <p>Select from the options below to get insight into the sales:</p>
+<a href="{{ url_for('todayAnalysis') }}">Today's Analysis</a><br>
 <a href="{{ url_for('dailyAnalysis') }}">Daily Analysis</a><br>
 <a href="{{ url_for('weeklyAnalysis') }}">Weekly Analysis</a>
 </body>
