--- a/src/templates/after-order.html
+++ b/src/templates/after-order.html
@@ -59,10 +59,33 @@
         .dashboard-btn:hover {
             background-color: #992222;
         }
+        .logout-btn{
+            display: block;
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #00FF00;
+            color: #FFFFFF;
+            border: none;
+            border-radius: 5px;
+            text-align: right;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .logout-btn:hover {
+            background-color:  #006400;
+        }
     </style>
 </head>
 <body>
 <h3>Order Bill</h3>
+<header>
+    <button class="logout-btn" onclick="window.location.href='{{ url_for('logout') }}'">logout</button>
+</header>
 <div class="table-container">
     <table>
         <thead>
