--- a/src/templates/analysis-today.html
+++ b/src/templates/analysis-today.html
@@ -75,9 +75,32 @@
             font-weight: bold;
             margin-top: 20px;
         }
+        .logout-btn{
+            display: block;
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #00FF00;
+            color: #FFFFFF;
+            border: none;
+            border-radius: 5px;
+            text-align: right;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .logout-btn:hover {
+            background-color:  #006400;
+        }
     </style>
 </head>
 <body>
+<header>
+    <button class="logout-btn" onclick="window.location.href='{{ url_for('logout') }}'">logout</button>
+</header>
 <h1>Today's Analysis ({{ date }})</h1>
 <u><h3>1. Today's analysis of {{ title[0] }}</h3></u>
 <h4>Graph</h4>
