--- a/src/templates/analysis.html
+++ b/src/templates/analysis.html
@@ -37,9 +37,32 @@
         a:hover {
             background-color: #992222;
         }
+        .logout-btn{
+            display: block;
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #00FF00;
+            color: #FFFFFF;
+            border: none;
+            border-radius: 5px;
+            text-align: right;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .logout-btn:hover {
+            background-color:  #006400;
+        }
     </style>
 </head>
 <body>
+<header>
+    <button class="logout-btn" onclick="window.location.href='{{ url_for('logout') }}'">logout</button>
+</header>
 <h1>Sales Analysis</h1><br>
 
 <p>Select from the options below to get insight into the sales:</p>
