--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -35,10 +35,35 @@
         a:hover {
             background-color: #992222;
         }
+
+        .logout-btn{
+            display: block;
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #00FF00;
+            color: #FFFFFF;
+            border: none;
+            border-radius: 5px;
+            text-align: right;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .logout-btn:hover {
+            background-color:  #006400;
+        }
     </style>
 </head>
 <body>
+<header>
+    <button class="logout-btn" onclick="window.location.href='{{ url_for('logout') }}'">Logout</button>
+</header>
 <h1>Welcome to Tea Traffic</h1>
+
 <nav>
     <a href="{{ url_for('order') }}">Click to Place an Order</a>
     <br>
