Implemented with flask_restful

--- a/src/templates/analysis-daily.html
+++ b/src/templates/analysis-daily.html
@@ -105,7 +105,7 @@
 <h1>Daily Analysis</h1>
 <u><h3>1. Daily analysis of {{ title[0] }}</h3></u>
 <h4>Graph</h4>
-<img src="{{ filename[0] }}" alt="{{ title[0] }} Graph">
+<img src="{{ filename[0] }}.png" alt="{{ title[0] }} Graph">
 <h4>Table</h4>
 <div class="table-container">
     <table>
@@ -129,7 +129,7 @@
 
 <u><h3>2. Daily analysis of {{ title[1] }}</h3></u>
 <h4>Graph</h4>
-<img src="{{ filename[1] }}" alt="{{ title[1] }} Graph">
+<img src="{{ filename[1] }}.png" alt="{{ title[1] }} Graph">
 <h4>Table</h4>
 <div class="table-container">
     <table>
@@ -153,7 +153,7 @@
 
 <u><h3>3. Daily analysis of {{ title[2] }}</h3></u>
 <h4>Graph</h4>
-<img src="{{ filename[2] }}" alt="{{ title[2] }} Graph">
+<img src="{{ filename[2] }}.png" alt="{{ title[2] }} Graph">
 <h4>Table</h4>
 <div class="table-container">
     <table>
@@ -177,7 +177,7 @@
 
 <u><h3>4. Daily analysis of {{ title[3] }}</h3></u>
 <h4>Graph</h4>
-<img src="{{ filename[3] }}" alt="{{ title[3] }} Graph">
+<img src="{{ filename[3] }}.png" alt="{{ title[3] }} Graph">
 <h4>Table</h4>
 <div class="table-container">
     <table>
