--- a/src/templates/analysis-weekly.html
+++ b/src/templates/analysis-weekly.html
@@ -101,7 +101,7 @@
 <h1>Weekly Analysis</h1>
 <u><h3>1. Week analysis of {{ title[0] }}</h3></u>
 <h4>Graph</h4>
-<img src="{{ filename[0] }}" alt="{{ title[0] }} Graph">
+<img src="{{ filename[0] }}.png" alt="{{ title[0] }} Graph">
 <h4>Table</h4>
 <div class="table-container">
     <table>
@@ -125,7 +125,7 @@
 
 <u><h3>2. Week analysis of {{ title[1] }}</h3></u>
 <h4>Graph</h4>
-<img src="{{ filename[1] }}" alt="{{ title[1] }} Graph">
+<img src="{{ filename[1] }}.png" alt="{{ title[1] }} Graph">
 <h4>Table</h4>
 <div class="table-container">
     <table>
